--- a/MALSimilarShows/MainWindow.xaml
+++ b/MALSimilarShows/MainWindow.xaml
@@ -13,10 +13,11 @@
         <Button x:Name="btnGo" Content="Go" HorizontalAlignment="Left" Margin="399,566,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Grid.ColumnSpan="2" Height="18"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,497,0,0" TextWrapping="Wrap" Text="Show 1: " VerticalAlignment="Top" Height="16" Width="45"/>
         <TextBlock HorizontalAlignment="Left" Margin="9,525,0,0" TextWrapping="Wrap" Text="Show 2: " VerticalAlignment="Top" Height="16" Width="45"/>
-        <TextBox x:Name="txtOne" TextChanged="txtOne_TextChanged" HorizontalAlignment="Left" Height="23" Margin="59,490,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="783"/>
-        <TextBox x:Name="txtTwo" TextChanged="txtTwo_TextChanged" HorizontalAlignment="Left" Height="23" Margin="59,518,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="783"/>
+        <TextBox x:Name="txtOne" TextChanged="txtOne_TextChanged" HorizontalAlignment="Left" Height="23" Margin="59,490,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="783"/>
+        <TextBox x:Name="txtTwo" TextChanged="txtTwo_TextChanged" HorizontalAlignment="Left" Height="23" Margin="59,518,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="783"/>
         <TextBlock x:Name="tbGood1" HorizontalAlignment="Left" Margin="847,490,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Height="23" Width="15" Foreground="Red" FontWeight="Bold" FontSize="16"/>
         <TextBlock x:Name="tbGood2" HorizontalAlignment="Left" Margin="847,518,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Height="23" Width="15" Foreground="Red" FontWeight="Bold" FontSize="16"/>
+        <CheckBox x:Name="chkOne" Content="Only get important stuff from show 1" HorizontalAlignment="Left" Margin="59,572,0,0" VerticalAlignment="Top" Unchecked="chkOne_Checked" Checked="chkOne_Checked"/>
 
     </Grid>
 </Window>
